--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
         <h1 id="title">Programmer Survey Form</h1>
         <p id="description">Thank you for your participation, keep coding and don't forget to sleep</p>
     </body>
-    <form action="#" id="survey-form"></form>
+    <form action="#" id="survey-form">
+        <fieldset>
+            <label for="name-label">Name<input type="text" name="name-label" id="name" placeholder="Enter your name" required /></label>
+            <label for="email-label">Email<input type="email" name="email-label" id="email" placeholder="Enter your email" required /></label>
+            <label for="number-label">Age(optional)<input type="number" name="number-label" id="age" placeholder="Age" min="1" max="100" /></label>
+        </fieldset>
+    </form>
 </html>
